--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ gunicorn==23.0.0
 h11==0.16.0
 packaging==25.0
 pillow==11.3.0
-psycopg-binary==3.2.10
+#psycopg-binary==3.2.10
+psycopg[binary]==3.2.10
 sqlparse==0.5.3
 typing_extensions==4.15.0
 uvicorn==0.35.0
